# crom-omni

./: --target  .gitignore  01_hello_universal.js  NATIVE_APPS.md  OMNI_BIBLE.md  OMNI_CONTEXT.json  OMNI_TASKS.md  README.md  build_output.json  check_error.omni  core_omni.py  crash.md  crash_tester.md  crash_tester_2.md  debug_output_raw.txt  debug_token_log.md  error_log_v3.omni  fix_build.py  fix_debug_bundle.js  main.python  manual_do_sistema.md  omni  omni.bat  omni.conf.json  omni_test_output.txt  out.js  output_debug.py  output_debug_utf8.py  panic_log.omni  patch_omni.py  precise_error.js  repro_php.omni  runtime_error.txt  smart_dedenter.md  target_test.omni  target_test.py  temp.txt  temp_debug.js  test-all.ps1  test_codegen.omni  (+11 more)
omnic/: Cargo.toml  build_log.txt  build_output.txt  errors.txt
omnic/lib/std/: 3d.omni  core.omni  http_adapter_js.js  io.omni  math.omni  runtime_3d.js  runtime_ui.py
omnic/src/: main.rs  main_port_helper.rs
omnic/src/commands/: clean.rs  mod.rs  repair.rs  studio.rs
omnic/src/core/: ast.rs  audit.rs  bytecode.rs  cache.rs  cgen.rs  changelog.rs  checksum.rs  codegen.rs  config.rs  context.rs  diagramgen.rs  diffinspect.rs  docextract.rs  docindex.rs  docker.rs  envman.rs  faq.rs  graphql.rs  ingest.rs  jsingest.rs  laravelgen.rs  laravelingest.rs  lexer.rs  logger.rs  lsp.rs  metamorph.rs  mod.rs  optimizer.rs  packager.rs  parser.rs  phpingest.rs  profiler.rs  pyingest.rs  reactgen.rs  reactingest.rs  registry.rs  resolver.rs  roadmap.rs  sandbox.rs  secrets.rs  (+17 more)
omnic/src/targets/: bytecode.rs  c.rs  c_backend.rs  js.rs  (+3 more)
(+482 files in other folders)
