[package]
name = "omnic"
version = "0.1.0"
edition = "2021"
authors = ["Omni Team"]
description = "The Omni Platform Compiler (MVP)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI Argument Parsing
clap = { version = "4.4", features = ["derive"] }

# Lexer Generator (Fast & Declarative)
logos = "0.13"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Serialização (para Debug e Futuro)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

# Formatadores de Output (Cores no Terminal)
colored = "2.0"
